# wbia-tpl-pyrf

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.rst  clean.sh  run_doctests.sh  run_tests.py  setup.cfg  setup.py  unix_build.sh
.github/workflows/: python-publish.yml
CMake/: CMakeLists.txt  Config.cmake.in  FindPyRF.cmake  FindVtool.cmake  pyrf.pc.in  pyrf_utils.cmake  python_utils.cmake
_docs/: conf.py  pyrf.rst
_graveyard/: parse_.py  process.py  test_pyrf.py  train_pyrf_elephant.py  train_pyrf_giraffe.py  train_pyrf_zebra_grevys.py  train_pyrf_zebra_plains.py  util_convert.py  util_stats.py
_test/: test.py
cmake/: VersionDiscovery.cmake
docs/: contents.html  genindex.html  index.html  objects.inv  py-modindex.html  pyrf.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/numpy/: ctypeslib.html
docs/_modules/pyrf/: __main__.html  _pyrf.html  ctypes_interface.html  pyrf_helpers.html
docs/_sources/: index.rst.txt  pyrf.rst.txt
pyrf/: __init__.py  __main__.py  _pyrf.py  pyrf_helpers.py
pyrf/_graveyard/: Makefile  process.py  randomize.py  train_pyrf_zebra_grevys.py
requirements/: runtime.txt
src/cpp/: CMakeLists.txt
src/cpp/pyrf/: CRForest-Detector-Class.hpp  CRForest.h  CRForestDetector.cpp  CRPatch.cpp  CRPatch.h  CRTree.cpp  HoG.cpp  HoG.h  MSR-SSLA.txt  config.h.in  pyrf.cpp  pyrf.h
tests/: test.py
